--- a/dog.html
+++ b/dog.html
@@ -12,7 +12,7 @@
         <div class="row">
           <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
-             <a class="navbar-brand" href="#">Приют домашних животных</a>
+             <a class="navbar-brand" href="index.hml">Приют домашних животных</a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                  </button>
@@ -47,49 +47,34 @@
 </nav>
         </div>
 <!---  комментарий карусель -->
-<div class="row>
-
-<div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/carusel/1.jpeg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/carusel/2.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/carusel/3.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item active">
-      <img src="img/carusel/4.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-      <div class="carousel-item active">
-      <img src="img/carusel/5.jpeg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
-</div>
 
 <div class="row">
 
-<div class="alert alert-success" role="alert">
-  A simple success alert—check it out!
-</div>
+  <div class="card" style="width: 18rem;">
+    <img src="img/gogs/1.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Шарик</h5>
+      <p class="card-text">Двортерьер</p>
+      <a href="dogshtml/sharik.html" class="btn btn-primary">Посмотреть</a>
+    </div>
+  </div>
 
+  <div class="card" style="width: 18rem;">
+    <img src="img/gogs/2.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Полкан</h5>
+      <p class="card-text">Полкан порода овчарок</p>
+      <a href="#" class="btn btn-primary">Подробнее...</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="img/gogs/3.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
 </div>
 
 
