--- a/dogshtml/sharik.html
+++ b/dogshtml/sharik.html
@@ -12,7 +12,7 @@
         <div class="row">
           <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
             <div class="container-fluid">
-             <a class="navbar-brand" href="#">Приют домашних животных</a>
+             <a class="navbar-brand" href="../index.hml">Приют домашних животных</a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                  </button>
@@ -29,7 +29,7 @@
             Наши питомцы
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="dog.html">Собаки</a></li>
+            <li><a class="dropdown-item" href="../dog.html">Собаки</a></li>
             <li><a class="dropdown-item" href="#">Кошки</a></li>
             <li><a class="dropdown-item" href="#">Крокодил</a></li>
           </ul>
@@ -47,50 +47,15 @@
 </nav>
         </div>
 <!---  комментарий карусель -->
-<div class="row>
-
-<div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/carusel/1.jpeg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/carusel/2.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/carusel/3.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item active">
-      <img src="img/carusel/4.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-      <div class="carousel-item active">
-      <img src="img/carusel/5.jpeg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
-</div>
 
 <div class="row">
 
-<div class="alert alert-success" role="alert">
-  A simple success alert—check it out!
-</div>
-
-</div>
+  <div class="card" style="width: 18rem;">
+    <img src="../img/gogs/1.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <p class="card-text">Самый лучший двортерьер в мире.</p>
+    </div>
+  </div>
 
 
     </div>
