--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html" aria-disabled="true">Контакты</a>
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -46,53 +46,36 @@
   </div>
 </nav>
         </div>
-<!---  комментарий карусель -->
-<div class="row>
-
-<div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/carusel/1.jpeg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/carusel/2.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/carusel/3.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-    <div class="carousel-item active">
-      <img src="img/carusel/4.jpg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-      <div class="carousel-item active">
-      <img src="img/carusel/5.jpeg" class="d-block w-50 caruselimg" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
-</div>
-
-<div class="row">
-
-<div class="alert alert-success" role="alert">
-  A simple success alert—check it out!
-</div>
-
-</div>
 
 
+        <div class="row">
+          <p> Наш приют для домаших живатных помогает животным но не всем, Гадов не берем.</p>
+        </div>
+        <div class="row">
+          <form action="https://yandex.ru" method="POST">
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Как к Вам обрашаться</label>
+              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Заполните пожалуйста Ваше Имя и Фамилия">
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Ваш телефон</label>
+              <input type="tel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Когд с Вам перезвонить</label>
+              <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Email</label>
+              <input type="email" class="form-control" id="exampleInputPassword1">
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Отправить</button>
+          </form>
+
+        </div>
+
+        
     </div>
 
 
